--- a/resources/assets/scss/core/_typography.scss
+++ b/resources/assets/scss/core/_typography.scss
@@ -11,6 +11,7 @@ p {
     line-height: 26px;
     letter-spacing: 0.02em;
     margin-bottom: 24px;
+    word-wrap: break-word;
 
     &.center {
         text-align: center;
