--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -15,11 +15,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:url('../fonts/icomoon.eot?-gq5ssa');
-    src:url('../fonts/icomoon.eot?#iefix-gq5ssa') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?-gq5ssa') format('truetype'),
-        url('../fonts/icomoon.woff?-gq5ssa') format('woff'),
-        url('../fonts/icomoon.svg?-gq5ssa#icomoon') format('svg');
+    src:url('../fonts/icomoon.eot?-7544ps');
+    src:url('../fonts/icomoon.eot?#iefix-7544ps') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?-7544ps') format('truetype'),
+        url('../fonts/icomoon.woff?-7544ps') format('woff'),
+        url('../fonts/icomoon.svg?-7544ps#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -173,3 +173,10 @@
 // .icon-arrow-down:before {
 //     content: "\e630";
 // }
+// .icon-icon-clarity:before {
+//     content: "\e631";
+// }
+// .icon-icon-clarity-shield:before {
+//     content: "\e632";
+// }
+
