--- a/resources/assets/scss/pages/about/_about.scss
+++ b/resources/assets/scss/pages/about/_about.scss
@@ -206,13 +206,13 @@
     }
 }
 
-.main-copy{
-    //padding-bottom: 60px;
+// .main-copy{
+//     //padding-bottom: 60px;
 
-    h1.plain {
-        padding-bottom: 30px;
-    }
-}
+//     h1.plain {
+//         //padding-bottom: 30px;
+//     }
+// }
 
 .red-block {
     padding: 50px $gutter;
