--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3691,154 +3691,165 @@ ul.actions li.unlock-countdown:before {
 }
 
 /* line 248, ../../resources/assets/scss/dashboard/_dashboard.scss */
+.module-home.page-icon:after {
+  content: '\e632';
+  left: 3px;
+}
+
+/* line 255, ../../resources/assets/scss/dashboard/_dashboard.scss */
+.module-welcome.page-icon:after {
+  content: '\e601';
+}
+
+/* line 261, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-boomerang h2:before {
   content: "\e600";
 }
-/* line 252, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 265, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-boomerang.module-icon:after,
 .module-boomerang .page-icon:after {
   content: '\e600';
 }
 
-/* line 259, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 272, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-un-stuck h2:before {
   content: "\e602";
 }
-/* line 263, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 276, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-un-stuck.module-icon:after,
 .module-un-stuck .page-icon:after {
   content: "\e602";
 }
 
-/* line 270, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 283, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise h2:before {
   content: "\e603";
 }
-/* line 274, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 287, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise.module-icon:after,
 .module-visualise .page-icon:after {
   content: "\e603";
 }
-/* line 280, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 293, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise .content img {
   width: 100%;
 }
 
-/* line 287, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 300, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-fear-courage h2:before {
   content: "\e604";
 }
-/* line 291, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 304, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-fear-courage.module-icon:after,
 .module-fear-courage .page-icon:after {
   content: "\e604";
 }
 
-/* line 298, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 311, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-giving h2:before {
   content: "\e605";
 }
-/* line 302, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 315, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-giving.module-icon:after,
 .module-giving .page-icon:after {
   content: "\e605";
 }
 
-/* line 309, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 322, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude h2:before {
   content: "\e606";
 }
-/* line 313, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 326, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude.module-icon:after,
 .module-gratitude .page-icon:after {
   content: "\e606";
 }
-/* line 318, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 331, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience {
   max-width: 445px;
   margin: auto auto 30px;
 }
-/* line 321, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 334, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience li {
   color: #f16060;
   font-style: italic;
 }
-/* line 324, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 337, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude ul.experience li span {
   font-weight: 500;
   font-style: normal;
   color: #252E33;
 }
 
-/* line 334, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 347, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-sustainable-change h2:before {
   content: "\e607";
 }
-/* line 338, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 351, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-sustainable-change.module-icon:after,
 .module-sustainable-change .page-icon:after {
   content: "\e607";
 }
 
-/* line 345, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 358, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-you-to-you h2:before {
   content: "\e608";
 }
-/* line 348, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 361, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-you-to-you.module-icon:after,
 .module-you-to-you .page-icon:after {
   content: "\e608";
 }
 
-/* line 355, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 368, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list .content {
   max-width: 920px;
 }
-/* line 361, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 374, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .header.locked {
   background-color: transparent;
 }
-/* line 366, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 379, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .actions li.forum {
   border-right: 1px solid #F89594 !important;
 }
 @media (max-width: 400px) {
-  /* line 365, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 378, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.module-list li.is-complete .actions {
     float: none;
   }
 }
-/* line 376, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 389, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 380, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 393, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked .actions li.forum {
   border-right: 1px solid #e6e6e6;
 }
-/* line 386, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 399, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 389, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 402, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .header {
   background-color: transparent;
   color: #c5c5c5;
 }
-/* line 394, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 407, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked:last-child {
   border-bottom: 1px solid #e6e6e6;
 }
-/* line 399, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 412, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.unlock-countdown {
   padding: 8.5px 15px;
 }
-/* line 402, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 415, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.unlock-countdown:before {
   left: 0;
   top: inherit;
 }
-/* line 407, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 420, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.arrow {
   visibility: hidden;
 }
