--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -92,6 +92,7 @@
     > .inner {
         .content {
             width: 445px;
+            width: 445px;
             margin: 0 auto;
             font-size: 17px;
             line-height: 26px;
@@ -151,11 +152,11 @@
         margin-bottom: 40px;
         line-height: 28px;
         letter-spacing: 0.02em;
-        max-width: 442px;
+        max-width: 445px;
     }
 
     p {
-        max-width: 442px;
+        max-width: 445px;
         width: 100%;
         text-align: center;
         margin-bottom: 40px;
