--- a/resources/assets/scss/pages/un-stuck/_un-stuck.scss
+++ b/resources/assets/scss/pages/un-stuck/_un-stuck.scss
@@ -59,7 +59,7 @@
         textarea {
             width: 100%;
             height: 100%;
-            padding: 30px 20px; //this was 50px 20px;
+            padding: 30px 15px; //this was 50px 20px;
             color: $fontColour;
             text-align:center;
             font-style: italic;
@@ -72,7 +72,7 @@
             &:focus {
                 background: $lightRed;
                 color:white;
-                border: 0;
+                border: 2px solid $lightRed;
             }
 
         }
@@ -136,7 +136,7 @@
         padding: 35px 25px 25px 25px;
         text-align: center;
         margin-bottom: 15px;
-        overflow: scroll;
+        //overflow: auto;
 
         @include breakpoint($brk-medium) {
             margin: 15px auto;
@@ -154,10 +154,11 @@
             font-style: italic;
             font-size: 14px;
             line-height: 22px;
+            margin: 12px 0;
         }
 
         strong {
-            font-size: 14px;
+            font-size: 15px;
         }
 
     }
@@ -193,16 +194,17 @@
             width: 100%;
             height: 100%;
             background: transparent;
-            padding: 50px 20px;
+            padding: 35px 15px;
             color: $fontColour;
             text-align: center;
             font-style: italic;
             margin: 0;
+            transition: background 0.2s ease, border 0.2s ease;
 
             &:focus {
                 background: $lightRed;
                 color: white;
-                border: 0;
+                border: 2px solid $lightRed;
             }
 
             border: 2px solid transparent;
