--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -12,8 +12,9 @@
     font-size: 15px; //this was 17px;
     border: 0;
 
-    &.small-dashboard {
+    &.small {
         padding: 5px 15px;
+        text-transform: inherit;
 
         &:after, &:before {
             display: none;
