created non module styles

--- a/resources/assets/scss/pages/boomerang/_cloud.scss
+++ b/resources/assets/scss/pages/boomerang/_cloud.scss
@@ -61,11 +61,11 @@ div.jqcloud span.w1 { color: #EC6262; }
 
 // cloud styles for input.
 
-body[data-page="tag-cloud-form"] {
-    padding: 50px;
+// body[data-page="tag-cloud-form"] {
+//     padding: 50px;
 
-    .form-row {
-        margin-bottom: 10px;
-    }
-}
+//     .form-row {
+//         margin-bottom: 10px;
+//     }
+// }
 
